Right clicking color picker crashes blender #64912

Closed
opened 2019-05-20 23:33:52 +02:00 by Jay Doshi · 5 comments

Operating system: Windows 10
Graphics card: Nvidia GTX 970

Broken: 2.80, 03672e7783, master, 2019-05-17

Right Clicking color picker crashes blender (only after description pops up)

Tried it multiple times, even on startup file.

Steps to reproduce the bug:-

Mouse hover on color picker on either (texture or material slot)
Wait for description to pop up near the mouse
Right Click (crashes it)

Not a major bug, but I just wanted to read the shortcut and change it; and it crashed.

Operating system: Windows 10 Graphics card: Nvidia GTX 970 Broken: 2.80, 03672e77836d, master, 2019-05-17 Right Clicking color picker crashes blender (only after description pops up) Tried it multiple times, even on startup file. Steps to reproduce the bug:- > Mouse hover on color picker on either (texture or material slot) > Wait for description to pop up near the mouse > Right Click (crashes it) Not a major bug, but I just wanted to read the shortcut and change it; and it crashed.
Author

Added subscriber: @netricsa

Added subscriber: @netricsa

#64966 was marked as duplicate of this issue

#64966 was marked as duplicate of this issue
George Vogiatzis self-assigned this 2019-05-21 07:04:12 +02:00

This issue was referenced by 2cec669d34

This issue was referenced by 2cec669d3456034adb41c9ab43598089f56f7554

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @KaiJaegersen

Added subscriber: @KaiJaegersen
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64912
No description provided.