Fix T64912: Crash right clicking on 'Add New Material'

D4904 by @Gvgeo